Added the CSS for the whole page

--- a/index.html
+++ b/index.html
@@ -9,88 +9,23 @@
   <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-  <!--Header-->
-  <div id="header">
-    <div class="float-left"> 
-      <ul>
-        <li>
-          <a href="#">About</a>
-        </li>
-        <li>
-          <a href="#">Store</a>
-        </li>
-      </ul>
-    </div>
 
-    <div class="float-right">
-      <ul>
-        <li>
-          <a href="#">Gmail</a>
-        </li>
-        <li>
-          <a href="#">Images</a>
-        </li>
-        <li>
-          <!--App Icon-->
-        </li>
-        <li>
-          <!--Sign In button-->
-          <button type="button">Sign in</button>
-        </li>
-      </ul>
-    </div>
-    
-  </div>
-
-  <!--Logo-->
-  <div id="logo">
-    <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google logo" width="200px">
-  </div>
-
-  <!--Search box-->
-  <div id="search-box">
-    <!--search box-->
-    <input type="search" name="search" id="search" placeholder="search here">
-
-    <div class="center">
-      <!--Google Search button-->
-      <button type="button">Google Search</button>
+  <section>
+    <header>
+          <div><a href="#">Gmail</a></div>
+          <div><a href="#">Images</a></div>
+          <div><a href="#"><img src='assets/apps.png' width="30px" width="30px" class="applogo"></a></div>
+          <div><a href="#"><button type="button">Sign in</button></a></div>
+    </header>
   
-      <!--I'm Feeling lucky button-->
-      <button type="button">I'm Feeling Lucky</button>
-
+  <div class='main'>
+    <img src="assets/google.png" class="logo" alt="Google logo" width="300px">
+    <div class='searchbox'>
+	<img src='assets/search.svg' class="contrast">
+	<input type='text' class='search' placeholder="Search Google or type a URL">
+	<img src='assets/mic.svg' class="contrast">
     </div>
   </div>
-
-  <!--Footer-->
-  <div id="footer">
-    <div class="float-left">
-      <ul>
-        <li>
-          <a href="#">Advertising</a>
-        </li>
-        <li>
-          <a href="#">Business</a>
-        </li>
-        <li>
-          <a href="#">How Search works</a>
-        </li>
-      </ul>
-    </div>
-
-    <div class="float-right">
-      <ul>
-        <li>
-          <a href="#">Privacy</a>
-        </li>
-        <li>
-          <a href="#">Terms</a>
-        </li>
-        <li>
-          <a href="#">Settings</a>
-        </li>
-      </ul>
-    </div>
-  </div>
+  </section>
 </body>
 </html>
